--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "erlangp/cobisja-tad-php",
+  "name": "erlangparasu/cobisja-tad-php",
   "type": "library",
   "description": "PHP class that allows you interact with ZK Time & Attendance devices.",
   "keywords": [
